<resources>
    <string name="app_name">씨네마천국</string>


    <!--MainActivity-->

    <!--    drawer items-->
    <string name="menu_movie_list">영화 목록</string>
    <string name="menu_movie_api">영화 API</string>
    <string name="menu_movie_reserve">예매하기</string>
    <string name="menu_settings">설정</string>
    <string name="menu_user_settings">사용자 설정</string>

    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">CalmDawn</string>
    <string name="nav_header_subtitle">https://github.com/calmdawn</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--    MoviePosterContainerFragment-->
    <string name="movie_poster_view_btn">상세 보기</string>

    <!--    MoviePosterFragment1-->
    <string name="movie_poster1_name">1. 군 도</string>
    <string name="movie_poster1_info">예매율 61.6% | 15세 관람가 | D-1</string>

    <!--    MoviePosterFragment2-->
    <string name="movie_poster2_name">2. 공 조</string>
    <string name="movie_poster2_info">예매율 61.6% | 15세 관람가 | D-1</string>

    <!--    MoviePosterFragment3-->
    <string name="movie_poster3_name">3. 더 킹</string>
    <string name="movie_poster3_info">예매율 11.2% | 12세 관람가</string>

    <!--    MoviePosterFragment4-->
    <string name="movie_poster4_name">4. 레지던트 이블</string>
    <string name="movie_poster4_info">예매율 21.6% | 15세 관람가 | D-2</string>

    <!--    MoviePosterFragment5-->
    <string name="movie_poster5_name">5. 럭 키</string>
    <string name="movie_poster5_info">예매율 21.7% | 12세 관람가 | D-3</string>


    <!--    MovieDetailInfoFragment-->

    <string name="movie_detail_info_poster_title">영화 상세</string>

    <!-- 영화 포스터-->
    <string name="movie_detail_info_poster_movie_name">군도</string>
    <string name="movie_detail_info_poster_date">2014.07.23 개봉</string>
    <string name="movie_detail_info_poster_type_time">액션 / 137 분</string>


    <!--예매율, 평점, 누적관객수-->
    <string name="movie_detail_info_movie_reservation_rate_text">예매율</string>
    <string name="movie_detail_info_movie_reservation_rate_num">5위 1.8%</string>
    <string name="movie_detail_info_movie_rank_text">평점</string>
    <string name="movie_detail_info_movie_rank_num">8.2</string>
    <string name="movie_detail_info_movie_audience_text">누적관객수</string>
    <string name="movie_detail_info_movie_audience_num">839,399명</string>


    <!--줄거리-->
    <string name="movie_detail_info_movie_story_title">줄거리</string>
    <string name="movie_detail_info_movie_story">
         군도, 백성을 구하라!
         \n양반과 탐관오리들의 착취가 극에 달했던 조선 철종 13년.
         힘 없는 백성의 편이 되어 세상을 바로잡고자 하는 의적떼인 군도(群盜), 지리산 추설이 있었다.
         \n\n쌍칼 도치 vs 백성의 적 조윤
         \n잦은 자연재해, 기근과 관의 횡포까지 겹쳐 백성들의 삶이 날로 피폐해 져 가는 사이, 나주 대부호의 서자로 조선 최고의 무관 출신인 조윤은 극악한 수법으로 양민들을 수탈, 삼남지방 최고의 대부호로 성장한다. 한편 소, 돼지를 잡아 근근이 살아가던 천한 백정 돌무치는
         죽어도 잊지 못할 끔찍한 일을 당한 뒤 군도에 합류. 지리산 추설의 신 거성(新 巨星) 도치로 거듭난다.
         \n\n뭉치면 백성, 흩어지면 도적!
         \n망할 세상을 뒤집기 위해, 백성이 주인인 새 세상을 향해 도치를 필두로 한 군도는 백성의 적, 조윤과 한 판 승부를 시작하는데…</string>

    <!--감독/출연 -->
    <string name="movie_detail_info_movie_director_actor_title">감독/출연</string>
    <string name="movie_detail_info_movie_director">감독</string>
    <string name="movie_detail_info_movie_director_name">윤종빈</string>
    <string name="movie_detail_info_movie_actor">출연</string>
    <string name="movie_detail_info_movie_actor_name">하정우(도치), 강동원(조윤)</string>


    <!-- 한줄평-->
    <string name="movie_detail_info_movie_review_title">한줄평</string>
    <string name="movie_detail_info_movie_review_write">작성하기</string>
    <string name="movie_detail_info_movie_review_all">모두 보기</string>
    <string name="movie_detail_info_movie_review_username">사용자이름</string>
    <string name="movie_detail_info_movie_review_usertime">7분전</string>
    <string name="movie_detail_info_movie_review_usercomment">코멘트가 들어갈 공간입니다.</string>
    <string name="movie_detail_info_movie_review_userrecommand">추천  0</string>
    <string name="movie_detail_info_movie_review_userreport">신고하기</string>


    <!-- 예매하기-->
    <string name="movie_detail_info_movie_reservation">예매하기</string>

    <!--  movie_detail_info 토스트-->
    <string name="movie_detail_info_toast_write">작성하기 버튼이 눌렸습니다.</string>
    <string name="movie_detail_info_toast_review_all">모두보기 버튼이 눌렸습니다.</string>

    <!--    WriteReviewActivity-->

    <string name="write_review_input_rate_score">평점을 입력해 주세요</string>
    <string name="write_review_edittext_hint">100자 이내로 작성해주세요.</string>
    <string name="write_review_btn_save">저 장</string>
    <string name="write_review_btn_cancel">취 소</string>
    <string name="write_review_toast_success">작성하기 화면에서 돌아왔습니다.\n작성여부 : true</string>
    <string name="write_review_toast_fail">작성하기 화면에서 돌아왔습니다.\n작성여부 : false</string>

    <!--    SeeAllReviewActivity-->
    <string name="see_all_review_toast_write">작성하기 버튼이 눌렸습니다.</string>
    <string name="see_all_review_toast_back">모두보기 화면에서 돌아왔습니다.</string>


</resources>