<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin_nav_header_medium"
    android:background="@drawable/thumbnail_base"
    android:orientation="vertical"
    android:padding="@dimen/padding_nav_header"
    android:weightSum="5">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_nav_header_large"
        android:layout_weight="3"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/margin_nav_header_medium"
        android:src="@drawable/profile"
        app:civ_border_color="@color/gray"
        app:civ_border_width="2dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/margin_nav_header_medium"
        android:text="@string/nav_header_title"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/nav_header_subtitle"
        android:textColor="@color/gray" />
</LinearLayout>