<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:orientation="horizontal">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/view_reviewitems_profile_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/user1"
        app:civ_border_color="@color/gray"
        app:civ_border_width="2dp" />


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/view_reviewitems_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_detail_info_movie_review_username"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_reviewitems_small" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_detail_info_movie_review_usertime"
                android:textSize="@dimen/textsize_reviewitems_medium" />

            <RatingBar
                android:id="@+id/view_reviewitems_star_score_ratingbar"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:stepSize="0.5"
                android:layout_marginStart="8dp" />

        </LinearLayout>


        <TextView
            android:id="@+id/view_reviewitems_comment_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/movie_detail_info_movie_review_usercomment"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_reviewitems_large" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_detail_info_movie_review_userrecommand"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize_reviewitems_medium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="|"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize_reviewitems_medium" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/movie_detail_info_movie_review_userreport"
                android:textSize="@dimen/textsize_reviewitems_medium" />


        </LinearLayout>

    </LinearLayout>


</LinearLayout>