<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".MoviePosterFragment1">


    <ImageView
        android:layout_weight="6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/margin_movie_detail_between_widget"
        android:src="@drawable/image3" />

    <LinearLayout
        
        android:layout_weight="4"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/margin_movie_detail_between_widget"
            android:text="@string/movie_poster3_name"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize_movie_detail_large" />

        <ImageView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/home_slider1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/margin_movie_detail_between_widget"
            android:text="@string/movie_poster3_info"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize_movie_detail_medium" />

        <Button
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/margin_movie_detail_between_widget"
            android:background="@drawable/button_view_detail_form"
            android:text="@string/movie_poster_view_btn"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize_movie_detail_large" />

    </LinearLayout>

</LinearLayout>